<resources>
    <string name="app_name">CommandeRestorant</string>

    <string name="title_activity_main_navigation">MainNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="email">Email</string>
    <string name="ForgetPassword">Forget Password?</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="Send">Send</string>
    <string name="dont_have_account">Don t have an account?</string>
    <string name="recieveCode">Didn t Recieve any code</string>
    <string name="register">Register</string>
    <string name="resend">resend</string>
    <string name="commande">Command e</string>
    <string name="code">Code</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="enter_the_sent">Enter the sent code to your email</string>
    <string name="Check">Check</string>
    <string name="letsget">Lets get started</string>
    <string name="Reset_your_forgot_tenpassword">Reset your forgotten password</string>
    <string name="point">point</string>
    <string name="my_Profile">My Profile</string>

    <array name="menuOptions">
        <item>Home</item>
        <item>Personal</item>
        <item>High scores</item>
        <item>Settings</item>
        <item>About</item>
        <item>About2</item>

    </array>
    <string name="title_activity_favorate_tap">FavorateTap</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

</resources>