<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

    </data>

    <LinearLayout
        android:id="@+id/edit_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:weightSum="3"
        tools:context=".auth.OTPCode.OTPCodeActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.example.commanderestorant.customfonts.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/commande"
                    android:textColor="@color/primaryTxtColor"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/back" />

            </RelativeLayout>

            <com.example.commanderestorant.customfonts.MyTextView
                android:id="@+id/textCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/txtLogin"
                android:layout_marginBottom="10dp"
                android:text="@string/code"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <com.example.commanderestorant.customfonts.MyTextView
                android:id="@+id/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                android:text="@string/enter_the_sent" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.3"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">





                        <com.chaos.view.PinView
                            android:id="@+id/firstPinView"
                            style="@style/PinWidget.PinView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/text"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:cursorVisible="true"
                            android:hint="****"
                            android:inputType="number"
                            android:paddingTop="5dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:cursorColor="@color/primaryTxtColor"
                            app:cursorWidth="2dp"
                            app:hideLineWhenFilled="true"
                            app:itemCount="6"
                            app:itemHeight="50dp"
                            app:itemRadius="10dp"
                            app:itemSpacing="10dp"
                            app:itemWidth="50dp"
                            app:lineColor="@color/primaryTxtColor"
                            app:lineWidth="1dp"
                            app:viewType="rectangle" />


                        <com.example.commanderestorant.customfonts.MyButton
                            android:id="@+id/btn_login"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginTop="30dp"
                            android:background="@drawable/shpe_btn_skip"
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:text="@string/Check"
                            android:textColor="@color/white"
                            android:textSize="11sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="30dp"
                        android:gravity="left"
                        android:layoutDirection="locale"
                        android:orientation="horizontal">

                        <com.example.commanderestorant.customfonts.MyTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recieveCode"
                            android:textColor="@color/loginSelver"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <com.example.commanderestorant.customfonts.MyTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/resend"
                            android:textColor="@color/purple_200"
                            android:textSize="12sp" />


                    </LinearLayout>


                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

    </LinearLayout>
</layout>