<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

    </data>

    <LinearLayout
        android:id="@+id/edit_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:weightSum="3"
        tools:context=".auth.Login.forgetPassword.ForgetPasswordActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.example.commanderestorant.customfonts.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/commande"
                    android:textColor="@color/primaryTxtColor"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/back" />

            </RelativeLayout>

            <com.example.commanderestorant.customfonts.MyTextView
                android:id="@+id/textLets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/txtLogin"
                android:layout_marginBottom="10dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <com.example.commanderestorant.customfonts.MyTextView
                android:id="@+id/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                android:text="@string/Reset_your_forgot_tenpassword" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.3"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <com.example.commanderestorant.customfonts.MyTextView
                            android:id="@+id/txt_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/email"
                            android:textColor="@color/black"
                            android:textSize="11sp" />


                        <com.example.commanderestorant.customfonts.MyEditText
                            android:id="@+id/edit_email"
                            android:layout_width="match_parent"
                            android:layout_height="52dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/selector_edit_text"
                            android:gravity="start|center"
                            android:hint="@string/email"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:textColor="@color/black"
                            android:textSize="11sp" />

                        <com.example.commanderestorant.customfonts.MyButton
                            android:id="@+id/btn_sendEmail"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginTop="30dp"
                            android:background="@drawable/shpe_btn_skip"
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:text="@string/Send"
                            android:textColor="@color/white"
                            android:textSize="11sp" />

                    </LinearLayout>



                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

    </LinearLayout>
</layout>